# qq-maid-bot

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README-dev.md  README.md  qbot.sh
qq-maid-core/: Cargo.toml  README.md
qq-maid-core/src/: config.rs  service.rs
qq-maid-core/src/app/: mod.rs  runtime.rs  workers.rs
qq-maid-core/src/config/: agent.rs  managed.rs  mod.rs  tests.rs
qq-maid-core/src/config/agent/: mod.rs  tests.rs
qq-maid-core/src/config/center/: agent_file.rs  field.rs  managed_file.rs  mod.rs  registry.rs  secret.rs  tests.rs
qq-maid-core/src/http/: console.rs  routes.rs
qq-maid-core/src/http/management/: auth_routes.rs  mod.rs
qq-maid-core/src/management/: auth.rs
qq-maid-core/src/management/auth/: tests.rs
qq-maid-core/src/runtime/: display_name.rs  group_role.rs  mod.rs  notification.rs  push.rs  respond.rs  todo_reminder.rs  translation.rs  visible_entity.rs
qq-maid-core/src/runtime/command/: mod.rs
qq-maid-core/src/runtime/knowledge/: mod.rs
qq-maid-core/src/runtime/pending/: mod.rs
qq-maid-core/src/runtime/prompt/: mod.rs  prompt_files.rs
qq-maid-core/src/runtime/respond/: agent_outcome.rs  agent_route.rs  chat_flow.rs  command_dispatcher.rs  command_render.rs  common.rs  conversation_session.rs  help.rs  interaction_state.rs  llm_service.rs  memory_flow.rs  mod.rs  pending.rs  router.rs  rss_flow.rs  search_flow.rs  session_flow.rs  set_flow.rs  title.rs  tool_presenters.rs  tool_projection.rs  tool_route.rs  tool_runtime.rs  train_flow.rs  translation_flow.rs  types.rs  weather_flow.rs
qq-maid-core/src/runtime/rss/: feed.rs  scheduler.rs
qq-maid-core/src/runtime/todo/: edit_patch.rs  mod.rs  ops.rs  reminder_task.rs  template.rs
qq-maid-core/src/runtime/tools/: AGENTS.md  agent_presenters.rs  agent_turn.rs  mod.rs  rss.rs  search.rs  status.rs  status_classifier.rs  status_semantics.rs  todo.rs  train.rs  weather.rs
qq-maid-core/src/runtime/train/: mod.rs
qq-maid-core/src/service/: handle.rs  mod.rs  streaming.rs  tests.rs  types.rs
qq-maid-core/src/service/tests/: agent.rs  commands.rs  mod.rs  planning.rs  request.rs  response.rs  streaming.rs  support.rs  web_search.rs
qq-maid-core/src/storage/: display_name.rs  memory.rs  migrations.rs  mod.rs  notification.rs  session.rs
qq-maid-core/src/storage/memory/: clean.rs  mod.rs  permission.rs  query.rs  (+2 more)
(+356 files in other folders)
