# qq-maid-core 项目清单 —— 定义包元信息和依赖项。
[package]
name = "qq-maid-core"
version = "0.1.16"
edition = "2024"

# 主运行依赖
[dependencies]
# 错误处理与 Result 简化
anyhow = "1"
# 部署管理员密码只保存 Argon2id 哈希，不复用聊天身份或明文凭据。
argon2 = "0.5"
# 主密钥文件采用可移植文本格式，原文只在进程内解码。
base64 = "0.22"
# 异步 trait 支持
async-trait = "0.1"
# HTML 清理
ammonia = "4"
# HTTP 服务框架
axum = "0.8"
# 日期时间处理
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Web 可写敏感值使用带认证的 XChaCha20-Poly1305 密文保存。
chacha20poly1305 = { version = "0.11", features = ["zeroize"] }
libc = "0.2"
# .env 文件加载
dotenvy = "0.15"
# RSS / Atom feed 解析
feed-rs = "2.4.0"
# 可选本地语义召回；默认配置关闭，启用后模型与推理均留在本机。
fastembed = { version = "5.17.3", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
# 异步数据流工具
futures = "0.3"
# HTML 摘要转纯文本
html2text = "0.17.1"
# Markdown 渲染
pulldown-cmark = "0.13"
# 正则表达式
regex = "1"
# HTTP 客户端（使用 rustls 而非 openssl）
reqwest = { version = "0.13", default-features = false, features = ["gzip", "json", "rustls"] }
# gateway 与 Core 共享的无业务状态基础工具。
qq-maid-common = { path = "../qq-maid-common" }
# LLM Provider、路由、SSE、usage、健康状态和 Web Search 协议由独立 crate 承载。
qq-maid-llm = { path = "../qq-maid-llm" }
# SQLite 存储，当前承载 Session、Todo、Memory、RSS 订阅和去重状态
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled", "functions"] }
# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# RSS 条目、知识文本和提醒去重指纹
sha2 = "0.11"
# 会话与 CSRF 摘要使用常量时间比较，避免把摘要比较变成旁路信号。
subtle = "2"
# 自定义错误类型派生
thiserror = "2"
# 异步运行时
tokio = { version = "1", features = ["full"] }
# 中间件层叠
tower = { version = "0.5", features = ["util"] }
# 日志与追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
# 非敏感 Agent 场景策略配置文件解析。
toml = "1.1"
# URL 解析与 SSRF 校验
url = "2"
# tracing-subscriber 的日志时间格式化辅助
time = { version = "0.3", features = ["macros"] }
# 会话 UUID
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
# Ops 长任务使用独立进程组，并在取消/超时时向整组发送 TERM/KILL。
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Windows 的受管配置写入使用带 replace/write-through 语义的原子文件替换。
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

# 仅测试用依赖
[dev-dependencies]
http-body-util = "0.1"
